# net-oce

./: .gitignore  CMakeLists.txt  README.md  bottle.cpp  editor.cpp  editor.h  genhandlers.js  handler.h.in  main.cpp  package.json  schema.js
protocol/: oce.proto
protocol/handlers/: box.h  copy.h  cube.h  export_brep.h  export_step.h  export_stl.h  extract_edges.h  extract_stl.h  extract_verts.h  op_copy.h  op_cut.h  op_intersect.h  op_rotate.h  op_translate.h  op_union.h  prim_box.h  prim_cube.h  prim_cylinder.h  prim_sphere.h  reset.h  rotate.h  shape_display.h  sphere.h  state_reset.h  translate.h
test/: catch.js  cube.js  package.json  run.js  test.js
test/fixtures/: cube.stl
tools/: genhandlers.js  monitor.sh
transport/: tcp.cpp  tcp.h
